--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,20 @@
-h1 {
-  color: #00a2c6;
+body {
+  background-color: #7fb77e;
+  font-family: "Quicksand", "Times New Roman";
+}
+
+aside {
+  padding: 12px;
+  border: 1px solid black;
+  display: flex;
+  background-color: #ffc090;
+  position: fixed;
+  width: 340px;
+  right: 20px;
+  top: 20px;
+}
+
+table {
+  text-align: left;
+  width: 100%;
 }
