--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,6 +8,24 @@ body {
   margin: auto;
 }
 
+.atas {
+  background-color: #005555;
+  padding: 5px;
+  text-align: center;
+}
+
+.judul {
+  background-color: #005555;
+  padding: 5px;
+  text-align: center;
+}
+
 table {
   text-align: left;
+}
+
+footer {
+  background-color: #a1e3d8;
+  padding: 10px;
+  text-align: center;
 }
